# QMsgMap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  ctmanager.cpp  ctmanager.h  example.pro  mainwindow.cpp  mainwindow.h  mapcirclewithtext.qml  mapview.qml  markermodel.cpp  markermodel.h  messageprocessor.cpp  messageprocessor.h  receiver.cpp  receiver.h  sender.cpp  sender.h
libs/: libSimpleAmqpClient.so.7.0.1
resources/: resources.qrc
resources/qml/: mapview.qml
src/: main.cpp  mainwindow.h  markermodel.cpp  markermodel.h  receiver.cpp  receiver.h
ui/: mainwindow.ui
